--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
     <aside>
       <input type="text" name="name" value="email address">
       <input type="button" value="Download Itinerary">
+      <section class="features">
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+        </article>
+      </section>
+      <section class="reviews">
+        <div class="content-wrapper">
+        </div>
+      </section>
     </aside>
 
   </main> <!-- main wrapper -->
