--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
+
   <header>
     <div class="content-wrapper">
       <a href="#">
@@ -42,6 +43,11 @@
   <main>
 
     <section class="hero-area">
+      <figure>
+        <a href="">
+             <img src="image.png" alt="Name of my awesome image">
+        </a>
+      </figure>
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
       </div>
