made embed map more responsive

--- a/about/index.html
+++ b/about/index.html
@@ -63,8 +63,7 @@
     <!--Embed Map Here-->
     <section class="map">
       <figure>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.384387533433!2d-80.83127408488362!3d35.14703318032221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88569f7326444ce3%3A0xd162a3a8b78473df!2sCafe%20Monte%20French%20Bakery%20and%20Bistro!5e0!3m2!1sen!2sus!4v1568504042756!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-      </figure>
+        <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.3843875334296!2d-80.8312740847557!3d35.147033180322296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88569f7326444ce3%3A0xd162a3a8b78473df!2sCafe%20Monte%20French%20Bakery%20and%20Bistro!5e0!3m2!1sen!2sus!4v1568506760636!5m2!1sen!2sus' width='600' height='450' frameborder='0' style='border:0;' allowfullscreen=''></iframe></div>      </figure>
     </section>
 
     <section class="contact-section">
